--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@react-router/node": "^7.7.1",
     "@react-router/serve": "^7.7.1",
     "@reduxjs/toolkit": "^2.8.2",
+    "axios": "^1.11.0",
     "idb": "^8.0.3",
     "isbot": "^5.1.27",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.7.1",
-    "redux-persist": "^6.0.0"
+    "react-toastify": "^11.0.5",
+    "redux-persist": "^6.0.0",
+    "redux-persist-transform-encrypt": "^5.1.1"
   },
   "devDependencies": {
     "@react-router/dev": "^7.7.1",
